# evolveguard

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: concepts.md  getting-started.md
docs/integrations/: ci.md
fixtures/labeled-non-breaking-edits/: README.md
fixtures/labeled-non-breaking-edits/case-01-wording-tweak/: fixtures.json  label.json
fixtures/labeled-non-breaking-edits/case-01-wording-tweak/after/: SKILL.md
fixtures/labeled-non-breaking-edits/case-01-wording-tweak/before/: SKILL.md
fixtures/labeled-non-breaking-edits/case-02-typo-fix/: fixtures.json  label.json
fixtures/labeled-non-breaking-edits/case-03-add-write-capability/: fixtures.json  label.json
fixtures/labeled-non-breaking-edits/case-04-scope-widened/: fixtures.json  label.json
fixtures/labeled-non-breaking-edits/case-05-new-hook-network-call/: fixtures.json  label.json
python/: README.md  pyproject.toml
python/examples/: README.md
python/examples/01-basic-record-replay/: demo.py
python/examples/02-ci-gate/: gate.py
python/examples/03-agent-native-json/: agent_report.py
python/src/evolveguard/: __init__.py  cli.py  errors.py  fixtures.py  formatters.py  paths.py  snapshot.py  types.py
python/src/evolveguard/diff/: __init__.py
python/src/evolveguard/parser/: skillmd.py
python/src/evolveguard/record/: __init__.py
python/src/evolveguard/replay/: __init__.py
python/src/evolveguard/report/: __init__.py
python/tests/: test_benchmark.py  test_cli.py  test_diff.py  test_fixtures.py  test_paths.py  test_record.py  test_replay.py  test_report.py  test_skillmd.py
src/evolveguard/: benchmark.test.ts  errors.ts  fixtures.test.ts  fixtures.ts  index.ts  paths.test.ts  paths.ts  snapshot.test.ts  snapshot.ts  types.ts
src/evolveguard-cli/: cli.test.ts  cli.ts  formatters.ts
src/evolveguard/diff/: index.test.ts  index.ts
src/evolveguard/parser/: skillmd.test.ts  skillmd.ts
src/evolveguard/record/: index.test.ts  index.ts
src/evolveguard/replay/: index.test.ts  index.ts
src/evolveguard/report/: index.test.ts  index.ts
(+10 files in other folders)
